# comp-arch

./: CMakeLists.txt  README.md  asteroid-par.h  asteroid-seq.h  asteroid.h  authors.txt  compare_results  compare_results_reb  init_conf.txt  init_conf.txt.base  main  main.cpp  nasteroids-par.cpp  nasteroids-seq.cpp  omp_exercises.cpp  out.txt  out.txt.base  rebound_test.cpp  step_by_step.student  step_by_step.txt
